# idsign-mpc-node

./: .env.example  Cargo.toml  README.md  cargo.toml  next.config.js  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/hooks/: useENV.ts
app/mpc/: page.tsx  route.ts
app/mpc/decrypt/: route.ts
app/mpc/get/: route.ts
app/mpc/nonce/: route.ts
app/mpc/set/: route.ts
contracts/: lib.rs  lib.sol  lib_simple.rs
public/: sw.js
scripts/: deploy.js  pbc.js  verify.js
src/: contract.rs  lib.rs
test/: before-build.js
